scroll behavious restoration and overflow property fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+	scroll-behavior: smooth;
+}
 * {
 	padding: 0;
 	margin: 0;
